# gpu-lidar-localization

./: .dockerignore  .gitignore  Makefile  README.md
.github/workflows/: docker.yml
cuda_icp_localizer/: CMakeLists.txt  README.md  package.xml
cuda_icp_localizer/config/: icp_localizer.rviz  icp_localizer_params.yaml
cuda_icp_localizer/include/cuda_icp_localizer/: icp_localizer.hpp
cuda_icp_localizer/launch/: icp_localizer.launch.py
cuda_icp_localizer/src/: icp_localizer.cpp
docker/: Dockerfile  compose.yaml  entrypoint.sh  fastdds_no_shm.xml
src/: scan_matching.cu  scan_matching.h
